--- a/.gitignore
+++ b/.gitignore
@@ -1,162 +1,49 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+import matplotlib.pyplot as plt
+from skimage import data
+from skimage.exposure import rescale_intensity
+import numpy as np
+from skimage.morphology import reconstruction
 
-# C extensions
-*.so
+# Load the sample image
+image = data.moon()
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+# Rescale image intensity to enhance visibility of dim features
+image = rescale_intensity(image, in_range=(50, 200))
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Create the seed and mask for filling holes
+seed_fill = np.copy(image)
+seed_fill[1:-1, 1:-1] = image.max()  # Max intensity for filling
+mask = image
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# Perform reconstruction by erosion (filling holes)
+filled = reconstruction(seed_fill, mask, method='erosion')
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
+# Create the seed and mask for identifying peaks
+seed_peak = np.copy(image)
+seed_peak[1:-1, 1:-1] = image.min()  # Min intensity for finding peaks
 
-# Translations
-*.mo
-*.pot
+# Perform reconstruction by dilation (identifying peaks)
+rec = reconstruction(seed_peak, mask, method='dilation')
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+# Plot the results
+fig, ax = plt.subplots(2, 2, figsize=(10, 8), sharex=True, sharey=True)
+ax = ax.ravel()
 
-# Flask stuff:
-instance/
-.webassets-cache
+ax[0].imshow(image, cmap='gray')
+ax[0].set_title('Original image')
+ax[0].axis('off')
 
-# Scrapy stuff:
-.scrapy
+ax[1].imshow(filled, cmap='gray')
+ax[1].set_title('After filling holes')
+ax[1].axis('off')
 
-# Sphinx documentation
-docs/_build/
+ax[2].imshow(image - filled, cmap='gray')
+ax[2].set_title('Holes')
+ax[2].axis('off')
 
-# PyBuilder
-.pybuilder/
-target/
+ax[3].imshow(image - rec, cmap='gray')
+ax[3].set_title('Peaks')
+ax[3].axis('off')
 
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/latest/usage/project/#working-with-version-control
-.pdm.toml
-.pdm-python
-.pdm-build/
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+plt.tight_layout()
+plt.show()
